force-app/main/default/objects/Work_Order_Prefills__c/Work_Order_Prefills__c.object-meta.xml
<CustomObject>
    <label>Work Order Prefills</label>
    <nameField>
        <label>Work Order Prefills Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Prefills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>