force-app/main/default/objects/Work_Order_Prefills__c/fields/Employee10__c.field-meta.xml
<CustomField>
    <fullName>Employee10__c</fullName>
    <label>Employee10</label>
    <length>80</length>
    <type>Text</type>
</CustomField>