force-app/main/default/objects/Work_Order_Prefills__c/fields/Employee10_Company__c.field-meta.xml
<CustomField>
    <fullName>Employee10_Company__c</fullName>
    <label>Employee10 Company</label>
    <length>25</length>
    <type>Text</type>
</CustomField>