force-app/main/default/objects/Work_Order_Prefills__c/fields/Employee1__c.field-meta.xml
<CustomField>
    <fullName>Employee1__c</fullName>
    <label>Employee1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>