force-app/main/default/objects/Work_Order_Prefills__c/fields/Employee1_Absent__c.field-meta.xml
<CustomField>
    <fullName>Employee1_Absent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee1 Absent</label>
    <type>Checkbox</type>
</CustomField>