force-app/main/default/objects/Work_Order_Prefills__c/fields/Employee2__c.field-meta.xml
<CustomField>
    <fullName>Employee2__c</fullName>
    <label>Employee2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>