force-app/main/default/objects/Work_Order_Prefills__c/fields/Feel_Like_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Feel_Like_Forecast__c</fullName>
    <label>Feel Like Forecast</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>