force-app/main/default/objects/Work_Order_Prefills__c/fields/Foreman_Email__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Email__c</fullName>
    <formula>Foreman_SFS_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman Email</label>
    <type>Text</type>
</CustomField>