force-app/main/default/objects/Work_Order_Prefills__c/fields/Foreman_Name__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Name__c</fullName>
    <label>Foreman Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>