force-app/main/default/objects/Work_Order_Prefills__c/fields/Foreman_SFS_User__c.field-meta.xml
<CustomField>
    <fullName>Foreman_SFS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foreman SFS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Prefills</relationshipName>
    <type>Lookup</type>
</CustomField>