force-app/main/default/objects/Work_Order_Prefills__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Work Order Prefills</relationshipLabel>
    <relationshipName>Work_Order_Prefills</relationshipName>
    <type>Lookup</type>
</CustomField>