force-app/main/default/objects/Work_Order_Prefills__c/fields/Is_API_Synced__c.field-meta.xml
<CustomField>
    <fullName>Is_API_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is API Synced</label>
    <type>Checkbox</type>
</CustomField>