force-app/main/default/objects/Work_Order_Prefills__c/fields/IsCreatedOnline__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedOnline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreatedOnline</label>
    <type>Checkbox</type>
</CustomField>