force-app/main/default/objects/Work_Order_Prefills__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>