force-app/main/default/objects/Work_Order_Prefills__c/fields/LastModifiedOlderThan7Days__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedOlderThan7Days__c</fullName>
    <formula>IF (LastModifiedDate &lt; DATETIMEVALUE(TODAY()) - 8, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedOlderThan7Days</label>
    <type>Checkbox</type>
</CustomField>