force-app/main/default/objects/Work_Order_Prefills__c/fields/Nearest_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Hospital__c</fullName>
    <label>Nearest Hospital</label>
    <type>TextArea</type>
</CustomField>