force-app/main/default/objects/Work_Order_Prefills__c/fields/Observer_Default_Crew__c.field-meta.xml
<CustomField>
    <fullName>Observer_Default_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observer Default Crew</label>
    <referenceTo>Default_Crew__c</referenceTo>
    <relationshipLabel>Work Order Prefills (Observer Default Crew)</relationshipLabel>
    <relationshipName>Work_Order_Prefills2</relationshipName>
    <type>Lookup</type>
</CustomField>