force-app/main/default/objects/Work_Order_Prefills__c/fields/Observer_Employee__c.field-meta.xml
<CustomField>
    <fullName>Observer_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Observer Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Work Order Prefills (Observer Employee)</relationshipLabel>
    <relationshipName>Work_Order_Prefills1</relationshipName>
    <type>Lookup</type>
</CustomField>