force-app/main/default/objects/Work_Order_Prefills__c/fields/Personell_Number1__c.field-meta.xml
<CustomField>
    <fullName>Personell_Number1__c</fullName>
    <label>Personnel Number1</label>
    <length>64</length>
    <type>Text</type>
</CustomField>