force-app/main/default/objects/Work_Order_Prefills__c/fields/Personnel_Number2__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number2__c</fullName>
    <label>Personnel Number2</label>
    <length>64</length>
    <type>Text</type>
</CustomField>