force-app/main/default/objects/Work_Order_Prefills__c/fields/Personnel_Number3__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Number3__c</fullName>
    <label>Personnel Number3</label>
    <length>64</length>
    <type>Text</type>
</CustomField>