force-app/main/default/objects/Work_Order_Prefills__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Stree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>