force-app/main/default/objects/Work_Order_Prefills__c/fields/Temperature_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Forecast__c</fullName>
    <label>Temperature Forecast</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>