force-app/main/default/objects/Work_Order_Prefills__c/fields/UpdatePrefill__c.field-meta.xml
<CustomField>
    <fullName>UpdatePrefill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdatePrefill</label>
    <type>Checkbox</type>
</CustomField>