force-app/main/default/objects/Work_Order_Prefills__c/fields/Walkdown_Default_Crew__c.field-meta.xml
<CustomField>
    <fullName>Walkdown_Default_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Walkdown Default Crew</label>
    <referenceTo>Default_Crew__c</referenceTo>
    <relationshipLabel>Work Order Prefills (Walkdown Default Crew)</relationshipLabel>
    <relationshipName>Work_Order_Prefills1</relationshipName>
    <type>Lookup</type>
</CustomField>