force-app/main/default/objects/Work_Order_Prefills__c/fields/Walkdown_Employee__c.field-meta.xml
<CustomField>
    <fullName>Walkdown_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Walkdown_Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Work Order Prefills</relationshipLabel>
    <relationshipName>Work_Order_Prefills</relationshipName>
    <type>Lookup</type>
</CustomField>