force-app/main/default/objects/Work_Order_Prefills__c/fields/Weather_Conditions_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Weather_Conditions_Forecast__c</fullName>
    <label>Weather Conditions Forecast</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>