force-app/main/default/objects/Work_Order_Prefills__c/fields/Weather_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Weather_Forecast__c</fullName>
    <label>Weather Forecast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>