force-app/main/default/objects/Work_Order_Prefills__c/fields/Who_Will_Meet_Default_Crew__c.field-meta.xml
<CustomField>
    <fullName>Who_Will_Meet_Default_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Will Meet Default Crew</label>
    <referenceTo>Default_Crew__c</referenceTo>
    <relationshipLabel>Work Order Prefills (Who Will Meet Default Crew)</relationshipLabel>
    <relationshipName>Work_Order_Prefills3</relationshipName>
    <type>Lookup</type>
</CustomField>