force-app/main/default/objects/Work_Order_Prefills__c/fields/Who_Will_Meet_Employee__c.field-meta.xml
<CustomField>
    <fullName>Who_Will_Meet_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Will Meet Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Work Order Prefills (Who Will Meet Employee)</relationshipLabel>
    <relationshipName>Work_Order_Prefills2</relationshipName>
    <type>Lookup</type>
</CustomField>