force-app/main/default/objects/Work_Order_Prefills__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <label>Wind Speed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>