force-app/main/default/objects/Work_Order_Prefills__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Work Order Prefills</relationshipLabel>
    <relationshipName>Work_Order_Prefills</relationshipName>
    <type>Lookup</type>
</CustomField>