force-app/main/default/objects/Work_Order_Prefills__c/fields/WorkOrder_Owner_Is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Owner_Is_Current_User__c</fullName>
    <formula>Foreman_SFS_User__r.Id = $User.Id</formula>
    <label>WorkOrder Owner Is Current User</label>
    <type>Checkbox</type>
</CustomField>