force-app/main/default/objects/Work_Order_Prefills__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WorkOrder__c</columns>
    <columns>Is_API_Synced__c</columns>
    <columns>Foreman_SFS_User__c</columns>
    <columns>Job_Location__c</columns>
    <columns>Nearest_Hospital__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>